Solving issue-1